--- a/templates/player.html
+++ b/templates/player.html
@@ -33,7 +33,7 @@
                            saturate({{ video.video_settings.saturate * 100 }})
                            hue-rotate({{ video.video_settings.hueRotate }})
                            "
-                   width="50%" controls playsinline preload="metadata">
+                   controls playsinline preload="metadata">
                 <source src="{{ url_for('static', filename='user_data/video/' + video.video_filename ) }}" type="video/mp4">
                 <source src="{{ url_for('static', filename='user_data/video/' + video.video_filename ) }}" type="video/x-msvideo">
                 <source src="{{ url_for('static', filename='user_data/video/' + video.video_filename ) }}" type="video/x-ms-wmv">
